# isofit-tutorials

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  utils.py  versions.json
.github/workflows/: mkdocs.yml
20151026_SantaMonica/lut/: AOT550-0.0000_H2OSTR-0.5000  AOT550-0.0000_H2OSTR-0.7000  AOT550-0.0000_H2OSTR-1.0000  AOT550-0.0500_H2OSTR-0.5000  AOT550-0.0500_H2OSTR-0.7000  AOT550-0.0500_H2OSTR-1.0000  AOT550-0.1000_H2OSTR-0.5000  AOT550-0.1000_H2OSTR-0.7000  AOT550-0.1000_H2OSTR-1.0000  AOT550-0.7003_H2OSTR-1.4000  AOT550-0.7003_H2OSTR-3.5600  AOT550-0.9001_H2OSTR-1.4000  AOT550-0.9001_H2OSTR-3.5600  LUT_AOT550-0.0000_H2OSTR-0.5000.inp  LUT_AOT550-0.0000_H2OSTR-0.7000.inp  LUT_AOT550-0.0000_H2OSTR-1.0000.inp  LUT_AOT550-0.0500_H2OSTR-0.5000.inp  LUT_AOT550-0.0500_H2OSTR-0.7000.inp  LUT_AOT550-0.0500_H2OSTR-1.0000.inp  LUT_AOT550-0.1000_H2OSTR-0.5000.inp  LUT_AOT550-0.1000_H2OSTR-0.7000.inp  LUT_AOT550-0.1000_H2OSTR-1.0000.inp  LUT_AOT550-0.7003_H2OSTR-1.4000.inp  lut.nc  (+7 more)
20250308_AV3Cal_demo/: README.txt
20250308_AV3Cal_wltest/: README.txt
3.7.3/: 404.html  index.html  sitemap.xml
3.7.5/: 404.html  index.html  sitemap.xml
3.7.6/: 404.html  index.html  sitemap.xml
NEON/: data_prep.ipynb  neon.ipynb  neon_single_pixel.ipynb
dev/: 404.html  index.html  sitemap.xml
dev_scripts/: README.md  test_6S.py  test_modtran.py  test_sRTMnet.py
docs/: index.md
isotuts/: neon_utils.py  utils.py
notebooks/: neon.ipynb
scripts/: test_6S.py  test_modtran.py  test_sRTMnet.py
search/: search_index.json
(+184 files in other folders)
