[metadata]
name = isotuts
version = 0.1
url = fakeLOC
description = Tutorials for ISOFIT
long_description = file: README.md
long_description_content_type = text/x-rst

license = Apache v2.0
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
  isofit >= 2.10.0
